# zig-build-cpp-with-libs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.zig  build_c.sh  build_cpp.sh  clang_build.sh  configure.sh  run.sh
src/: main.c  main.cpp  main.zig
src/utils/: a.cpp  a.h  b.cpp  b.h
